@@ -52,6 +52,7 @@
 #include "cigicl/CigiHatHotReqV3.h"
 #include "cigicl/CigiSOFV3.h"
 #include "cigicl/CigiHatHotRespV3.h"
+#include "cigicl/CigiHatHotRespV3_2.h"
 #include "cigicl/CigiHatHotXRespV3_2.h"
 #include "cigicl/CigiLosRespV3.h"
 #include "cigicl/CigiCollDetSegRespV3.h"
@@ -60,9 +61,6 @@
 #include "cigicl/CigiIGMsgV3.h"
 #include "cigicl/CigiHostSession.h"
 #include "cigicl/CigiBaseSignalProcessing.h"
-#include "cigicl/CigiIncomingMsg.h"
-#include "cigicl/CigiOutgoingMsg.h"
-#include "cigicl/CigiHotRespV2.h"
 #include "cigicl/CigiSensorCtrlV3.h"
 
 #include <cstdio>
@@ -2217,35 +2215,40 @@ void CigiClNetworkSignalProcessing::OnCollDetVolResp(CigiBasePacket* packet)
    if (p != 0) p->collisionVolumeResp( dynamic_cast<CigiCollDetVolRespV3*> (packet) );
 }
 
+
 void CigiClNetworkSignalProcessing::OnHotResp(CigiBasePacket* packet)
 {
-   if (p != 0){
-      std::cout << "p class type: " << typeid(*packet).name() << std::endl;
-      CigiHotRespV2* m2 = dynamic_cast<CigiHotRespV2*> (packet);
+   if (p != 0) {
+
       CigiHatHotRespV3* m3 = dynamic_cast<CigiHatHotRespV3*> (packet);
-      CigiHatHotXRespV3_2* mx3_2 = dynamic_cast<CigiHatHotXRespV3_2*> (packet);
-
-      if (m2 != 0) {
-         CigiHatHotRespV3 resp;
-         resp.SetHatHotID(m2->GetHatHotID());
-         resp.SetHot(m2->GetHot());
-         resp.SetValid(m2->GetValid());
-         p->hatHotResp( &resp );
-      }
-
-      else if (m3 != 0) {
+      if (m3 != 0) {
          p->hatHotResp( m3 );
       }
-      else if (mx3_2 != 0) {
-         CigiHatHotRespV3 resp;
-         resp.SetHatHotID(mx3_2->GetHatHotID());
-         resp.SetHot(mx3_2->GetHot());
-         resp.SetValid(mx3_2->GetValid());
-         p->hatHotResp( &resp );
-      }
+      else {
 
+         CigiHatHotRespV3_2* m3_2 = dynamic_cast<CigiHatHotRespV3_2*> (packet);
+         if (m3_2 != 0) {
+            CigiHatHotRespV3 resp;
+            resp.SetHatHotID(m3_2->GetHatHotID());
+            resp.SetHot(m3_2->GetHot());
+            resp.SetValid(m3_2->GetValid());
+            p->hatHotResp( &resp );
+         }
+         else {
+            CigiHatHotXRespV3_2* mx3_2 = dynamic_cast<CigiHatHotXRespV3_2*> (packet);
+            if (mx3_2 != 0) {
+               CigiHatHotRespV3 resp;
+               resp.SetHatHotID(mx3_2->GetHatHotID());
+               resp.SetHot(mx3_2->GetHot());
+               resp.SetValid(mx3_2->GetValid());
+               p->hatHotResp( &resp );
+            }
+         }
+
+      }
    }
 }
+
 
 void CigiClNetworkSignalProcessing::OnHatHotResp(CigiBasePacket* packet)
 {
